# rapha-pdf-generation

./: .env.production  .env.staging  .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  api-gateway-template.yaml  check_prerequisites.sh  create-lambda-layer.sh  deploy-config.json  deploy.sh  fix_and_redeploy.sh  iam-policies.json  lambda_handler.py  main.py  prescription-preview.html  pyproject.toml  requirements-lambda.txt  requirements.txt  second_brain.md  setup-monitoring.sh  test-lambda-deployment.py  test_lambda_deployment.py  test_pdf_endpoints.py  test_pdf_lambda.py
app/: handler.py
app/api/v1/endpoints/: pdf.py  users.py
app/core/: config.py
app/schemas/: invoice.py  prescription.py  user.py
app/services/: pdf_service.py  user_service.py
app/templates/: invoice.html  prescription.html
app/utils/: auth.py  responses.py
